Wrong number of copied files / total files showin in copy progress for large number of file transfer from external harddisk
Check the attached screenshot, x out of y (denoted by x/y) in copy progress is somehow bugged. In this scenario the x goes above y which shouldn't be allowed.
There were some file errors where I had to press skip for some files, maybe that triggered the issue that the count of total files kept going down, but the count of file processed didn't change.
A similar bug was closed down recently, saying that it occurred in a nautilus version no longer supported by gnome. But, the issue is still prevalent even on the latest build of Ubuntu 20 with all packages updated to their latest versions with a recent software update. See here - #1327 (closed)
Also, a new issue was incomplete transfer complete UI (both in progress bar and the pie chart for copy dialog) - See the screenshot below
To reproduce:
- Try copying a folder with large number of files where there maybe some conflicts in operations such as you may have to skip some file or merge conflict (anything that interrupts the copy progress and prompts you for a choice that can reduce the number of actual files copied)
The version of files that I am using is - 3.36.2-stable