file-operations: Fix transfered count for directories

The size of a copied or moved directory (when represented as a file itself - in
addition to its contents) was not being included in the transferred byte count.

Add code to include size of directory in transferred byte count.

Closes https://gitlab.gnome.org/GNOME/nautilus/-/issues/1501